# napari-file-watcher

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: imswitch-test.yml  plugin-test.yml
example_data/neuron_tile_8.zarr/: .zattrs
example_data/neuron_tile_8.zarr/0/: .zarray
example_data/neuron_tile_8.zarr/0/0/0/: 0  1
example_data/neuron_tile_8.zarr/0/0/1/: 0  1
example_data/neuron_tile_8.zarr/1/: .zarray
example_data/neuron_tile_8.zarr/2/: .zarray
example_data/neuron_tile_8.zarr/3/: .zarray
example_data/neuron_tile_8.zarr/4/: .zarray
example_data/neuron_tile_8.zarr/Green/: .zarray  .zattrs  0.1.1  100.0.0  101.0.0  101.0.1  101.1.0  101.1.1  102.0.1  103.1.0  103.1.1  104.0.0  105.0.1  106.1.0  106.1.1  107.0.0  107.0.1  107.1.0  108.0.0  108.1.0  108.1.1  109.0.0  109.0.1  109.1.0  11.0.0  11.0.1  11.1.1  110.1.0  111.0.1  111.1.0  112.0.1  112.1.0  113.0.0  113.0.1  113.1.1  114.0.0  114.1.0  115.0.1  115.1.0  116.0.1  (+583 more)
napari_file_watcher/: FileReader.py  FileWatcher.py  main_module.py  napari.yaml
napari_imswitch_client/: ScriptExecutor.py  experiment.py  main_module.py  napari.yaml
test_data/: timelapse.py
test_data/neuron_tile_8.zarr/Green/: 0.0.0  0.0.1  0.1.0  1.0.0  1.0.1  1.1.0  1.1.1  10.0.0  10.0.1  10.1.0  10.1.1  100.0.1  100.1.0  100.1.1  102.0.0  102.1.0  102.1.1  103.0.0  103.0.1  104.0.1  104.1.0  104.1.1  105.0.0  105.1.0  105.1.1  106.0.0  106.0.1  107.1.1  108.0.1  109.1.1  11.1.0  110.0.0  110.0.1  110.1.1  111.0.0  111.1.1  112.0.0  112.1.1  113.1.0  114.0.1  (+635 more)
tests/: test_filewatcher.py  test_script.py
(+12 files in other folders)
