[metadata]
name = napari-imswitch-client
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    ome-zarr
    zarr
    PyQt5
    qtpy
    QScintilla

[options.entry_points]
napari.manifest =
    napari-imswitch-client = napari_imswitch_client:napari.yaml