[metadata]
name = napari-file-watcher
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    ome-zarr
    zarr
    h5py
    PyQt5
    qtpy
    QScintilla

[options.entry_points]
napari.manifest =
    napari-file-watcher = napari_file_watcher:napari.yaml